<resources>
    <string name="app_name">Brain Game</string>
    <string name="usuario">Usuario</string>
    <string name="patrones_inicio">Memorizar</string>
    <string name="responder_inicio">Responder</string>
    <string name="ayuda_login">Si usted ya tiene un usuario registrado inicie sesion a nuestro
        servidor con su usuario y clave. Si aun no ha creado un usuario presione el boton "Crear usuario"</string>
    <string name="ayuda_principal"></string>
    <string name="fallo_conexion">Hay un fallo con la conexion a nuestro servidor. Compruebe su conexion a internet </string>
    <string name="fallo_conexion_estadisticas">Hay un fallo con la conexion a nuestro servidor. Compruebe su conexion a internet. No se ha podido actualizar su puntuacion online </string>
    <string name="completar_inicio">Completar</string>
    <string name="repetir_clave">Repita la clave</string>
    <string name="fallo_clave">Las claves no coinciden</string>
    <string name="corresponder_inicio">Emparejar</string>
    <string name="calcular_inicio">Calcular</string>
    <string name="calcular_titulo">Calcula el resultado</string>
    <string name="calcular_ganar_maximo">Has ganado el máximo nivel. Eres un gran matemático </string>
    <string name="calcular_ganar">Enhorabuena, has ganado pasas al siguiente nivel</string>
    <string name="correcta">La respuesta correcta era: </string>
    <string name="acierto">Acierto</string>
    <string name="fallo">Fallo</string>
    <string name="falta_seleccion">Falta seleccionar una opcion</string>
    <string name="descripcion_juego_calcular">Este juego consiste en seleccionar la opcion del calculo correcto, segun vayas acertando pasas de nivel y los cálculos se complican</string>
    <string name="tiempo_fuera">Se ha agotado el tiempo</string>
    <string name="tiempo">Tiempo</string>
    <string name="positivo">Si</string>
    <string name="negativo">No</string>
    <string name="leer_inicio">Leer</string>
    <string name="clave">Clave</string>
    <string name="registrar">Crear usuario</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="nivel">Nivel</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="cerrado_sesion">Usted ha cerrado la sesión</string>
    <string name="evaluar">Evaluar</string>
    <string name="ayuda">Ayuda</string>
    <string name="registro">Registrar</string>
    <string name="registrarse">Crear usuario</string>
    <string name="ordenar_ok_button">OK</string>
    <string name="ordenar_inicio">Ordenar</string>
    <string name="ordenar_InfoText1">Recuerdate del orden de las imagenes arriba</string>
    <string name="ordenar_InfoText2">Elegir los imagenes correctos de abajo y confirma con el boton "OK"</string>
    <string name="ordenar_correctoTitulo">Correcto</string>
    <string name="ordenar_correctoMensaje">Tu orden está correcto. Intenta en menos tiempo!</string>
    <string name="ordenar_incorrectoTitulo">Incorrecto</string>
    <string name="ordenar_incorrectoMensaje">Tu orden no está correcto. Intenta otra vez!</string>
    <string name="ordenar_finTitulo">Fin del Juego</string>
    <string name="descripcion_juego_leer">Este juego consiste en reconocer el color del que están pintadas las palabras que aparecen en pantalla. Una vez que aparezca una palabra dispondrás de un periodo de tiempo en el cual tendrás que decir el color que crees que es el correcto.</string>
    <string name="ordenar_finGanadoMensaje">Otra vez correcto. Has ganado el juego! Tu punctuación final es:\u0020</string>
    <string name="ordenar_finPerdidoMensaje">Te has equivocado demasiado! Has perdido el juego!</string>
    <string name="ordenar_Puntos">Puntos:\u0020</string>
    <string name="leer_seleccionar_dificultad">Selecciona el nivel de dificultad:</string>
    <string name="puntos">Puntos</string>
    <string name="leer_facil">Fácil</string>
    <string name="leer_normal">Normal</string>
    <string name="leer_dificil">Difícil</string>
    <string name="leer_siguiente">Siguiente</string>
    <string name="leer_empezar">Empezar</string>
    <string name="leer_puntos">Puntos:</string>
    <string name="leer_tiempo">Tiempo:</string>
    <string name="leer_atras">Atrás</string>
    <string name="title_activity_activity_dificultad" translatable="false">ActivityDificultad</string>
    <string name="ordenar_actDif_Titulo">Juego Ordenar</string>
    <string name="ayuda_ordenar">La meta del juego es recordar el orden de los colores en el tiempo mostrado a la derecha arriba. Después de que este limite se acaba, tienes que drag and drop las imágenes de abajo en los campos de arriba en el orden recordado. Cuando todas las imágenes son puesto, pulsa el botón OK.
    Si tu orden esta correcto, el límite de tiempo se reduce.</string>
    <string name="corresponder_actDif_Titulo">Juego Emparejar</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="resumen_completar">Deberás completar los huecos de las palabras con alguna de las letras que tienes como solución</string>
    <string name="aceptar">Aceptar</string>
    <string name="palabras_acertadas">Palabras acertadas</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_juego_completar">JuegoCompletar</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="corresponder_descripcion">Decida si las dos imagenes a la izquierda son iguales o no. Pulsa el boton correcto cada vez.</string>
    <string name="corresponder_si">Emparejan</string>
    <string name="corresponder_no">No Emparejan</string>
    <string name="corresponder_mensajeFin">Se acabó el tiempo! Fin del juego. Tu puntuación final es:\u0020</string>
    <string name="ayuda_corresponder">La meta del juego es de decir por las más imágenes que posible si corresponden o no. Siempre tienes q comparar las dos imagenes a la izquierda, que son un poquito más grande que los demas.
Las otras imágenes sirven como cola para ya saber si corresponden las próximas parejas. Para decir si corresponden las imágenes, tienes que pulsar el botón "Corresponden" si corresponden, y el botón "No Corresponden" si no.
En la dificultad fácil, tienes más tiempo para ganar puntos (40 segundos), pero una correspondencia vale menos puntos (2 puntos). En las dificultades normal y difícil tienes menos tiempo (30 y 20 segundos respectivamente), pero ganas más puntos (4 y 6 respectivamente).</string>
    <string name="recordar_actDif_Titulo">Juego Memorizar</string>
    <string name="ayuda_recordar">La meta del juego es memorizar el orden en que esta destellando los botones en rojo. Tienes que recordarte de todo el orden. Tienes múltiples intentos para pulsar el orden correcto. Pero cada vez que haces un error, pierdes 75 puntos.
En modo fácil, tienes 150 puntos al principio y 2 intentos. En modo normal, tienes 250 puntos y 3 intentos. En modo difícil, tienes 350 puntos y 5 intentos. En los tres niveles tienes que recordarte de una cadena de 6, 8 y 10 respectivamente.</string>
    <string name="recordar_descripcion">Memoriza el orden en que las imágenes destellan. Lo menos intentos que necesitas, lo más puntos tienes al final</string>
    <string name="recordar_mensajeFin">Has ganado! Fin del juego. Tu puntuación final es:\u0020</string>
    <string name="recordar_reiniciar">El orden no estaba correcto. El orden correcto se muestra otra vez. Intenta otra vez!</string>
    <string name="recordar_reiniciar_titulo">Intenta otra vez!</string>


    <string name="generar">Generar palabra</string>
    <string name="comprobar">Comprobar palabra</string>
    <string name="titulo_responder">Responder a las preguntas</string>
    <string name="responder_parar">Parar</string>
    <string name="title_activity_activity_inicio" translatable="false">ActivityInicio</string>

</resources>
