<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sdm.uniovi.braingame.juegos.ordenar.ActivityDificultad"
    android:orientation="vertical"
    android:background="@color/background_material_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ordenar_actDif_Titulo"
        android:id="@+id/lbTitulo"
        android:textSize="30sp"
        android:layout_weight="0.04"
        android:textColor="@color/text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leer_seleccionar_dificultad"
        android:id="@+id/lbSeleccion"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:layout_weight="0.03" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup_Dificultad"
        android:paddingLeft="30dp"
        android:clickable="false"
        android:layout_weight="0.07"
        android:layout_margin="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_facil"
            android:id="@+id/radioButton_facil"
            android:layout_weight="0.08"
            android:checked="true"
            android:textColor="@color/text" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_normal"
            android:id="@+id/radioButton_normal"
            android:layout_weight="0.08"
            android:textColor="@color/text" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_dificil"
            android:id="@+id/radioButton_dificil"
            android:layout_weight="0.08"
            android:textColor="@color/text" />

    </RadioGroup>

    <Button
        android:layout_width="128dp"
        android:layout_height="20dp"
        android:text="@string/leer_empezar"
        android:id="@+id/btEmpezar"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:onClick="irAlJuego"
        style="@style/AppCompat.Button.Flat.Common"
        android:background="@drawable/button_boarder"
        android:textColor="@color/text" />

</LinearLayout>
