<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/background_material_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reconocer el color"
        android:id="@+id/tvDescripcionDif"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_weight="0.12"
        android:paddingStart="10dp"
        android:paddingTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leer_seleccionar_dificultad"
        android:id="@+id/tvDificultadDif"
        android:layout_weight="0.06"
        android:textColor="#000000"
        android:textSize="20sp"
        android:paddingStart="10dp" />

    <RadioGroup
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.39"
        android:paddingStart="30dp"
        android:id="@+id/radioGroupDificultades">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_facil"
            android:id="@+id/radioButtonFacil"
            android:layout_weight="0.08" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_normal"
            android:id="@+id/radioButtonNormal"
            android:layout_weight="0.08" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_dificil"
            android:id="@+id/radioButtonDificil"
            android:layout_weight="0.08" />
    </RadioGroup>

    <Button
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:text="@string/leer_empezar"
        android:id="@+id/btEmpezarDif"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:onClick="irAJuegoLeer"
        android:background="@color/background_material_dark" />
</LinearLayout>