<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/background_material_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leer_seleccionar_dificultad"
        android:id="@+id/tvDificultadDif"
        android:layout_weight="0.06"
        android:textColor="@color/text"
        android:textSize="25sp"
        android:paddingStart="10dp" />

    <RadioGroup
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.39"
        android:paddingStart="30dp"
        android:id="@+id/radioGroupDificultades">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_facil"
            android:id="@+id/radioButtonFacil"
            android:layout_weight="0.08"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:buttonTint="@color/text"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_normal"
            android:id="@+id/radioButtonNormal"
            android:layout_weight="0.08"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:buttonTint="@color/text"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_dificil"
            android:id="@+id/radioButtonDificil"
            android:layout_weight="0.08"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:buttonTint="@color/text"/>
    </RadioGroup>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"></TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.24"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/leer_atras"
            android:id="@+id/btAtrasDif"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:background="@drawable/button_boarder"
            android:textAllCaps="false"
            android:layout_weight="1.42"
            android:onClick="irAtrasDif" />

        <Button
            style="@style/AppCompat.Button.Flat.Common"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/leer_empezar"
            android:id="@+id/btEmpezarDif"
            android:onClick="irAJuego"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:background="@drawable/button_boarder"
            android:textAllCaps="false"
            android:layout_weight="1"/>
    </TableRow>

</LinearLayout>