<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:stretchColumns="*"

    tools:context=".MainActivity"
    android:id="@+id/tlInicio"
    android:background="@color/background_material_dark">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/background_material_dark">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/bInicioPatrones"
            android:onClick="irAPatrones"
            android:text="@string/patrones_inicio"
            android:layout_gravity="center_vertical"
            style="@style/AppCompat.Button.Flat.Common"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordenar_inicio"
            android:id="@+id/bInicioOrdenar"
            android:onClick="irAOrdenar"
            android:layout_gravity="center_vertical"
            style="@style/AppCompat.Button.Flat.Common"
            android:textSize="25sp"
            android:textColor="#FFFFFF"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular_inicio"
            android:id="@+id/bInicioCalcular"
            android:onClick="irACalcular"
            android:layout_gravity="center_vertical"
            style="@style/AppCompat.Button.Flat.Common"
            android:textSize="25sp"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_inicio"
            android:id="@+id/bInicioLeer"
            android:onClick="irALeer"
            android:layout_gravity="center_vertical"
            style="@style/AppCompat.Button.Flat.Common"
            android:textSize="25sp"
            android:textColor="#FFFFFF"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/responder_inicio"
            android:id="@+id/bInicioResponder"
            android:onClick="irAResponder"
            android:layout_gravity="center_vertical"
            style="@style/AppCompat.Button.Flat.Common"
            android:textSize="25sp"
            android:textColor="#FFFFFF"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completar_inicio"
            android:id="@+id/bInicioCompletar"
            android:onClick="irACompletar"
            android:layout_gravity="center_vertical"
            style="@style/AppCompat.Button.Flat.Common"
            android:textSize="25sp"
            android:textColor="#FFFFFF"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corresponder_inicio"
            android:id="@+id/bInicioCorresponder"
            android:onClick="irACorresponder"
            android:layout_gravity="center_vertical"
            style="@style/AppCompat.Button.Flat.Common"
            android:textSize="25sp"
            android:textColor="#FFFFFF"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivInicioLogo"
            android:src="@drawable/logo" />
    </TableRow>

</TableLayout>
