<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_dark">



        <TextView
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:text="@string/calcular_titulo"
            android:id="@+id/tvTituloJuego"
            android:textSize="30sp"
            android:textColor="@color/text"
            android:layout_weight="0.04"
            android:paddingStart="10dp"
            android:paddingTop="10dp" />

        <TextView

            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/descripcion_juego_calcular"
            android:id="@+id/tvDescripcion"
            android:layout_weight="0.08"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:layout_width = "wrap_content"
            android:textColor="@color/text" />

    <ImageView
        android:layout_width="218dp"
        android:layout_height="223dp"
        android:id="@+id/ivInicioCalcular"
        android:src="@drawable/inicio_calcular"
        android:layout_gravity="center_horizontal"/>

    <Button
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/leer_siguiente"
            android:layout_marginTop="21dp"
            android:id="@+id/btSiguiente"
            android:layout_gravity="right"
            android:textColor="@color/text"
            android:layout_weight="0.03"
            android:onClick="irAEscogerDificultad"
            android:background="@drawable/button_boarder"
            android:textAllCaps="false"
            android:textSize="25sp" />



</LinearLayout>