<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_margin="33dp"
    >

    <TextView
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/usuario"
        android:id="@+id/tvUsuarioRegistro"
        android:layout_weight="0.04"
        android:layout_row="10"
        android:layout_column="0"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etUsuarioRegistro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="25sp"
        android:layout_below="@+id/tvUsuarioRegistro"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/clave"
        android:id="@+id/tvClaveRegistro"
        android:layout_weight="0.04"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:layout_below="@+id/etUsuarioRegistro"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etClaveRegistro"
        android:layout_alignParentStart="true"
        android:password="true"
        android:textSize="25sp"
        android:layout_below="@+id/tvClaveRegistro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:id="@+id/btRegistro"
        android:textSize="25sp"
        android:onClick="registrar"
        style="@style/AppCompat.Button.Flat.Common"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/repetir_clave"
        android:id="@+id/tvRepetirClave"
        android:layout_weight="0.04"
        android:layout_row="10"
        android:layout_column="0"
        android:textSize="25sp"
        android:layout_below="@+id/etClaveRegistro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etRepetirCLave"
        android:password="true"
        android:textSize="25sp"
        android:layout_below="@+id/tvRepetirClave"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/registrar"
        android:id="@+id/tvRegistro"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp"
        android:onClick="hacerRegistro" />


</RelativeLayout>