<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_material_dark"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_responder"
        android:id="@+id/tvTituloResIni"
        android:textSize="30sp"
        android:textColor="@color/text"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:layout_weight="0.06" />

    <TextView
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Este juego consiste en responder adecuadamente a una serie de preguntas que aparecerán en pantalla de entre varias categorías. Una vez que aparece una pregunta el usuario tendrá un tiempo para responder."
        android:id="@+id/tvDescripcionRes"
        android:layout_weight="0.55"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:textColor="@color/text"
        android:layout_gravity="center_horizontal" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:weightSum="1"
        android:measureWithLargestChild="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/leer_atras"
            android:id="@+id/btAtrasResIni"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:background="@drawable/button_boarder"
            android:layout_weight="0.69"
            android:textAllCaps="false"
            android:onClick="irAtrasResIni" />

        <Button
            style="@style/AppCompat.Button.Flat.Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_siguiente"
            android:id="@+id/btSiguienteResIni"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:background="@drawable/button_boarder"
            android:layout_weight="0.34"
            android:textAllCaps="false"
            android:onClick="irAEscogerDificultadRes" />
    </TableRow>
</LinearLayout>